--- a/index.html
+++ b/index.html
@@ -19,13 +19,25 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div class="container">
-    <!-- Timeblocks go here -->
+  <div class="container-fluid">
+    <div class="row" id="9am">
+      <div class="col-1 bg-secondary" id="9amHour" value="9" border-primary time-block";">9:00 AM</div>
+      <textarea id="9" class="col-10 description textarea storageborder" placeholder="Type Notes Here"></textarea>
+      <button id="9amSAVEbtn" data-hour=9 type="button" class="col-1 btn btn-primary">Save notes</button>
 
-  </div>
 
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+      <div class="row bg-dark">
+      </div>
+      <div class="row bg-danger">
+
+      </div>
+      </>
+      <!-- Timeblocks go here -->
+
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 </body>
 
 </html>
