--- a/index.html
+++ b/index.html
@@ -17,107 +17,103 @@
   <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
+
+    <!--Displays current moment() time on the webpage-->
     <p id="currentDay" class="lead"></p>
-
   </header>
-  <div class="container-fluid">
 
-    <!-- Timeblocks go here -->
+  <!--Timeblock content for the calender-->
+  <main class="container">
+
 
     <!--9 AM-->
     <div class="row time-block" id="hour9">
-      <div class="col-sm-1 col-md-1 col-lg-1 btn col-xl-1 hour">
+      <div class="col-2 hour">
         9 AM
       </div>
-      <textarea class="col-sm-12 col-md-10 col-lg-10 col-xl-10 description textarea border"
-        placeholder="Type Notes Here"></textarea>
-      <button class="col-sm-1 col-md-1 col-lg-1 btn col-xl-1 saveBtn fas fa-save"></button>
+      <textarea class="col-9 description" placeholder="Type Notes Here"></textarea>
+      <button class="col-1 saveBtn fas fa-save"></button>
     </div>
 
     <!--10 AM-->
     <div class="row time-block" id="hour10">
-      <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1">
+      <div class="col-2 hour">
         10 AM
       </div>
-      <textarea id="10" class="col-sm-12 col-md-10 col-lg-10 col-xl-10 description textarea border"
-        placeholder="Type Notes Here"></textarea>
-      <button class="col-sm-1 col-md-1 col-lg-1 btn col-xl-1 saveBtn fas fa-save"></button>
+      <textarea class="col-9 description" placeholder="Type Notes Here"></textarea>
+      <button class="col-1 saveBtn fas fa-save"></button>
     </div>
 
     <!--11 AM-->
     <div class="row time-block" id="hour10-1">
-      <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1">
+      <div class="col-2 hour">
         11 AM
       </div>
-      <textarea id="11" class="col-sm-12 col-md-10 col-lg-10 col-xl-10 description textarea border"
-        placeholder="Type Notes Here"></textarea>
-      <button class="col-sm-1 col-md-1 col-lg-1 btn col-xl-1 saveBtn fas fa-save"></button>
+      <textarea class="col-9 description" placeholder="Type Notes Here"></textarea>
+      <button class="col-1 saveBtn fas fa-save"></button>
     </div>
 
     <!--12 PM-->
     <div class="row time-block" id="hour12">
-      <div class="col-sm-1 col-md-1 col-lg-1 btn col-xl-1">
+      <div class="col-2 hour">
         12 PM
       </div>
-      <textarea id="12" class="col-sm-12 col-md-10 col-lg-10 col-xl-10 description textarea border"
-        placeholder="Type Notes Here"></textarea>
-      <button class="col-sm-1 col-md-1 col-lg-1 btn col-xl-1 saveBtn fas fa-save"></button>
+      <textarea class="col-9 description" placeholder="Type Notes Here"></textarea>
+      <button class="col-1 saveBtn fas fa-save"></button>
     </div>
 
     <!--1 PM-->
     <div class="row time-block" id="hour13">
-      <div class="col-sm-1 col-md-1 col-lg-1 btn col-xl-1">
+      <div class="col-2 hour">
         1 PM
       </div>
-      <textarea class="col-sm-12 col-md-10 col-lg-10 col-xl-10 description textarea border"
-        placeholder="Type Notes Here"></textarea>
-      <button class="col-sm-1 col-md-1 col-lg-1 btn col-xl-1 saveBtn fas fa-save"></button>
+      <textarea class="col-9 description" placeholder="Type Notes Here"></textarea>
+      <button class="col-1 saveBtn fas fa-save"></button>
     </div>
 
     <!--2 PM-->
     <div class="row time-block" id="hour14">
-      <div class="col-sm-1 col-md-1 col-lg-1 btn col-xl-1">
+      <div class="col-2 hour">
         2 PM
       </div>
-      <textarea class="col-sm-12 col-md-10 col-lg-10 col-xl-10 description" placeholder="Type Notes Here"></textarea>
-      <button class="col-sm-1 col-md-1 col-lg-1 btn col-xl-1 saveBtn fas fa-save"></button>
+      <textarea class="col-9 description" placeholder="Type Notes Here"></textarea>
+      <button class="col-1 saveBtn fas fa-save"></button>
     </div>
 
     <!--3 PM-->
     <div class="row time-block" id="hour15">
-      <div class="col-sm-1 col-md-1 col-lg-1 btn col-xl-1">
+      <div class="col-2 hour">
         3 PM
       </div>
-      <textarea id="3" class="col-sm-12 col-md-10 col-lg-10 col-xl-10 description"
-        placeholder="Type Notes Here"></textarea>
-      <button class="col-sm-1 col-md-1 col-lg-1 btn col-xl-1 saveBtn fas fa-save"></button>
+      <textarea class="col-9 description" placeholder="Type Notes Here"></textarea>
+      <button class="col-1 saveBtn fas fa-save"></button>
     </div>
 
     <!--4 PM-->
     <div class="row time-block" id="hour16">
-      <div class="col-sm-1 col-md-1 col-lg-1 btn col-xl-1">
+      <div class="col-2 hour">
         4 PM
       </div>
-      <textarea class="col-sm-12 col-md-10 col-lg-10 col-xl-10 description" placeholder="Type Notes Here"></textarea>
-      <button class="col-sm-1 col-md-1 col-lg-1 btn col-xl-1 saveBtn fas fa-save"></button>
+      <textarea class="col-9 description" placeholder="Type Notes Here"></textarea>
+      <button class="col-1 saveBtn fas fa-save"></button>
     </div>
 
     <!--5 PM-->
     <div class="row time-block" id="hour17">
-      <div class="col-sm-1 col-md-1 col-lg-1 btn col-xl-1">
+      <div class="col-2 hour">
         5 PM
       </div>
-      <textarea class="col-sm-12 col-md-10 col-lg-10 col-xl-10 description textarea border"
-        placeholder="Type Notes Here"></textarea>
-      <button class="col-sm-1 col-md-1 col-lg-1 btn col-xl-1 saveBtn fas fa-save"></button>
+      <textarea class="col-9 description" placeholder="Type Notes Here"></textarea>
+      <button class="col-1 saveBtn fas fa-save"></button>
     </div>
 
+  </main>
+  <!--End of Timblocks and main content-->
 
+  <!--Footer section-->
+  <footer>Created by Jeffrey Anderson-Lester, 2021</footer>
 
-
-
-  </div>
-
+  <!--jQuery and JavaScript -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="assets/js/script.js"></script>
